# kppm

./: .gitignore  CMakeLists.txt  Makefile  README.md
Examples/: CMakeLists.txt
src/: CMakeLists.txt  box.cpp  box.h  boxstore.h  env.h  gather.h  hash.h  jobserver.h  main.cpp  p1task.cpp  p1task.h  p2task.cpp  p2task.h  p3creator.cpp  p3creator.h  p3task.cpp  p3task.h  problem.cpp  problem.h  result.cpp  result.h  sense.h  solutions.cpp  solutions.h  task.h  types.h
tests/: Makefile
